--- a/OnRoad/res/layout/guid_page.xml
+++ b/OnRoad/res/layout/guid_page.xml
@@ -6,17 +6,30 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
-
+		
+        <LinearLayout 
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            >
+            <ImageView
+		        android:id="@+id/guid_image_view"
+		        android:layout_width="fill_parent"
+		        android:layout_height="fill_parent"
+		        android:src="@drawable/appintro1"
+		        android:scaleType="centerCrop"
+		        />
+        </LinearLayout>
+        
         <android.support.v4.view.ViewPager
             android:id="@+id/view_pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-
+		
         <FrameLayout
             android:layout_width="100dp"
             android:layout_height="30dp"
             android:layout_gravity="bottom|center_horizontal" >
-
+			
             <com.viewpagerindicator.CirclePageIndicator
                 android:id="@+id/dot_marks"
                 android:layout_width="fill_parent"
