--- a/OnRoad/res/layout/guid_page_detail.xml
+++ b/OnRoad/res/layout/guid_page_detail.xml
@@ -1,24 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/relatlayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <ImageView
-        android:id="@+id/guid_image_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="fitXY"
-        />
-    <RelativeLayout 
-        android:id="@+id/image_framelayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-       	android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="60dp"
-        >
-    </RelativeLayout>
-
-</RelativeLayout>
+        <LinearLayout 
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:background="#00000000"
+            android:orientation="vertical"
+            android:gravity="bottom"
+            >
+             <TextView
+		        android:id="@+id/guid_title_text"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+				android:textColor="@color/guid_content_text_color"
+				android:textSize="@dimen/guid_content_text_size"
+		        />
+             
+            <TextView
+		        android:id="@+id/guid_content_text"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+				android:textColor="@color/guid_content_text_color"
+				android:textSize="@dimen/guid_content_text_size"
+				android:layout_margin="20dp"
+		        />
+        </LinearLayout>
+     
+</LinearLayout>
