--- a/OnRoad/res/layout/guid_page.xml
+++ b/OnRoad/res/layout/guid_page.xml
@@ -7,36 +7,102 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 		
-        <LinearLayout 
+        <FrameLayout  
+            android:id="@+id/imag_layout"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
+            android:background="#00000000"
             >
             <ImageView
-		        android:id="@+id/guid_image_view"
+		        android:id="@+id/guid_bg"
 		        android:layout_width="fill_parent"
 		        android:layout_height="fill_parent"
+		        android:background="#00000000"
 		        android:src="@drawable/appintro1"
 		        android:scaleType="centerCrop"
 		        />
-        </LinearLayout>
+            
+             <ImageView
+		        android:id="@+id/guid_image_view"
+		        android:layout_width="fill_parent"
+		        android:layout_height="fill_parent"
+		        android:background="#00000000"
+		        android:src="@drawable/appintro1"
+		        android:scaleType="centerCrop"
+		        />
+        </FrameLayout>
         
         <android.support.v4.view.ViewPager
             android:id="@+id/view_pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 		
-        <FrameLayout
-            android:layout_width="100dp"
-            android:layout_height="30dp"
-            android:layout_gravity="bottom|center_horizontal" >
-			
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="bottom|center_horizontal" >	
+            		
             <com.viewpagerindicator.CirclePageIndicator
                 android:id="@+id/dot_marks"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center" 
+                android:layout_marginBottom="18dp"/>
+            
+            <LinearLayout 
+                android:id="@+id/login_bg"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:padding="10dip" />
-        </FrameLayout>
+                android:orientation="horizontal"
+                android:background="@color/guid_btn_bg_color_first"
+                >
+                <LinearLayout 
+                    android:id="@+id/regin_btn"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:clickable="true"
+                    android:background="@drawable/home_content_btn_selector">
+                    <TextView 
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:text="@string/regin_text"
+                        android:textColor="@color/guid_btn_text_color"
+                        android:textSize="@dimen/guid_regin_text_size"/>
+                </LinearLayout>
+                
+                <LinearLayout 
+                    android:layout_width="1px"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:background="#55000000">
+                </LinearLayout>
+                
+                <LinearLayout 
+                    android:id="@+id/login_btn"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:clickable="true"
+                    android:background="@drawable/home_content_btn_selector">
+                    <TextView 
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:text="@string/login_text"
+                        android:textColor="@color/guid_btn_text_color"
+                        android:textSize="@dimen/guid_regin_text_size"/>
+                </LinearLayout>
+                
+            </LinearLayout>
+            
+        </LinearLayout>
+        
     </FrameLayout>
 
 </LinearLayout>
