--- a/OnRoad/res/layout/guid_page_detail.xml
+++ b/OnRoad/res/layout/guid_page_detail.xml
@@ -12,22 +12,34 @@
             android:orientation="vertical"
             android:gravity="bottom"
             >
-             <TextView
-		        android:id="@+id/guid_title_text"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-				android:textColor="@color/guid_content_text_color"
-				android:textSize="@dimen/guid_content_text_size"
-		        />
+            <LinearLayout 
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="78dp"
+                android:orientation="vertical">
+                <TextView
+			        android:id="@+id/guid_title_text"
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content"
+					android:textColor="@color/guid_content_text_color"
+					android:textSize="@dimen/guid_title_text_size"
+					android:layout_marginLeft="20dp"
+					android:layout_marginRight="30dp"
+			        />
+	             
+	            <TextView
+			        android:id="@+id/guid_content_text"
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content"
+					android:textColor="@color/guid_content_text_color"
+					android:textSize="@dimen/guid_content_text_size"
+					android:layout_marginLeft="20dp"
+					android:layout_marginRight="30dp"
+					android:layout_marginTop="20dp"
+					android:layout_marginBottom="20dp"
+			        />
+            </LinearLayout>
              
-            <TextView
-		        android:id="@+id/guid_content_text"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-				android:textColor="@color/guid_content_text_color"
-				android:textSize="@dimen/guid_content_text_size"
-				android:layout_margin="20dp"
-		        />
         </LinearLayout>
      
 </LinearLayout>
