--- a/OnRoad/res/values/my_actionbar_styles.xml
+++ b/OnRoad/res/values/my_actionbar_styles.xml
@@ -6,7 +6,7 @@
     </style>
     
     <style name="MyActionBar" parent="@android:style/Widget.Holo.Light.ActionBar" type="text/css">
-        <item name="android:background">#FFF5FFFA</item>    
+        <item name="android:background">#FFF5FFFA</item>      
         <item name="android:titleTextStyle">@style/MyActionBarTitleText</item>        
     </style> 
     
@@ -21,6 +21,20 @@
  	    
  	</style>
  
+ 	
+ 	
+ 	<style name="CustomTranslateActionBarTheme" parent="@android:style/Theme.Holo.Light" type="text/css" >
+ 	    <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:actionBarStyle">@style/MyTranslateActionBar </item>
+        <item name="android:actionBarTabTextStyle">@style/MyActionBarTabText</item>
+    </style>
     
+ 	<style name="MyTranslateActionBar" parent="@android:style/Widget.Holo.Light.ActionBar" type="text/css">
+        <item name="android:background">#00000000</item>   
+        <item name="android:titleTextStyle">@style/MyActionBarTitleText</item>        
+    </style> 
+
+ 	
 </resources>
 	
